--- a/abc_comprehensivecba.tex
+++ b/abc_comprehensivecba.tex
@@ -362,7 +362,7 @@ A benchmark comparison for the labor income predictions we produce is to follow 
 \input{output/mincerpred_ready.tex}
 \begin{tablenotes}
 \footnotesize
-\item Note: This table presents Mincer-type predictions \citep{Mincer_1974_schooling}. Prediction: predicted labor income at age 30 based on the procedure in Section~\ref{sec:necrosis}. Perpetuity: Prediction/.03. Life-cycle NPV: life-cycle predicted net present value of income based on the procedure in Section~\ref{sec:necrosis}. Standard errors are in parentheses and are based on the empirical bootstrap distribution.
+\item Note: This table presents Mincer-type predictions \citep{Mincer_1974_schooling}. Prediction: predicted labor income at age 30 based on the procedure in Section~\ref{sec:necrosis}. Perpetuity: Prediction/.03. Life-cycle NPV: life-cycle predicted net present value of income based on the procedure in Section~\ref{sec:necrosis}. All values are in 1,000s (2014 USD). Standard errors are in parentheses and are based on the empirical bootstrap distribution.
 \end{tablenotes}
 \end{threeparttable}
 \end{table}
