--- a/output/allsamplesmatch_ready.tex
+++ b/output/allsamplesmatch_ready.tex
@@ -1,4 +1,4 @@
-\begin{tabular}{ccccccccccc} \hline \hline
+\begin{tabular}{ccccccccccc} \toprule
 \multicolumn{5}{c}{\textbf{Control}} & \multicolumn{5}{c}{\textbf{Treatment}} \\
 Male  & Education (30)  & Labor Income (21) & Labor Income (30)  & BMI (34) & Male  & Education (30)  & Labor Income (21) & Labor Income (30)  & BMI (34)  \\  \midrule
 \multicolumn{10}{l}{\textit{\textbf{ABC/CARE}}} \\
