--- a/output/abc_predict.tex
+++ b/output/abc_predict.tex
@@ -1,20 +1,21 @@
-\begin{tabular}{lcccccc} \bottomrule
+\begin{tabular}{lcccccc} \hline
  & (1) & (2) & (3) & (4) & (5) & (6) \\
-Experimental Group & Control & Treatment & Control & Treatment  & Control & Treatment \\ \midrule
-Male & 5,452.397 & 24,139.647* & -3,811.694 & 35,850.552* & -7,828.471 & 9,255.347 \\
- & (6,967.926) & (14,275.022) & (5,661.255) & (19,903.956) & (7,541.988) & (8,168.632) \\
-Mother's Education & 918.774 & 3,743.814 & -562.317 & 4,848.578 & -2,106.622 & -59.153 \\
- & (1,939.836) & (4,323.725) & (1,596.149) & (5,217.403) & (2,389.652) & (3,427.905) \\
-PIAT (5-7) &  &  & 43.676 & 10.104 & 291.760 & 191.140 \\
- &  &  & (270.532) & (513.672) & (409.468) & (550.848) \\
-Education (30) &  &  & 3,490.984** & 13,255.184*** & 2,758.518 & 17,057.753*** \\
- &  &  & (1,320.575) & (4,460.865) & (2,438.243) & (5,074.370) \\
-Labor Income (21) &  &  & 0.713** & -0.330 & 0.626 & 0.323 \\
- &  &  & (0.302) & (0.557) & (0.488) & (0.403) \\
-BMI (34) &  &  &  &  & -148.492 & -946.389* \\
- &  &  &  &  & (420.495) & (488.018) \\
-Constant & 14,057.024 & -14,567.060 & -24,761.617 & -208,159.891 & -16,283.653 & -185,334.878** \\
- & (20,452.906) & (47,906.935) & (28,454.566) & (130,549.675) & (48,849.383) & (86,603.159) \\ \\ \midrule
- Observations & 67 & 65 & 54 & 56 & 33 & 43 \\
-$R^2$ & 0.016 & 0.051 & 0.240 & 0.278 & 0.243 & 0.520 \\ \bottomrule
+ & abcZc & abcZt & abcZXc & abcZXt & abcZLc & abcZLt \\
+VARIABLES & si30y\_inc\_labor & si30y\_inc\_labor & si30y\_inc\_labor & si30y\_inc\_labor & si30y\_inc\_labor & si30y\_inc\_labor \\ \hline
+ &  &  &  &  &  &  \\
+m\_ed0y & 1,118.825 & 3,182.189 & -655.396 & 2,809.800 & -2,048.917 & -907.345 \\
+ & (1,922.374) & (4,079.940) & (1,630.680) & (4,645.056) & (2,437.556) & (3,331.414) \\
+piatmath &  &  & 76.010 & -406.692 & 358.559 & 106.426 \\
+ &  &  & (280.636) & (541.580) & (425.794) & (564.333) \\
+years\_30y &  &  & 3,267.429** & 12,065.478*** & 2,221.816 & 17,251.381*** \\
+ &  &  & (1,311.682) & (4,322.113) & (2,227.515) & (5,187.102) \\
+si21y\_inc\_labor &  &  & 0.669** & -0.167 & 0.561 & 0.424 \\
+ &  &  & (0.310) & (0.518) & (0.486) & (0.413) \\
+si34y\_bmi &  &  &  &  & -108.403 & -1,090.877** \\
+ &  &  &  &  & (408.783) & (523.658) \\
+Constant & 14,411.303 & 4,436.275 & -25,258.113 & -113,348.865 & -19,952.864 & -162,353.622* \\
+ & (20,535.425) & (40,973.951) & (27,842.709) & (96,245.638) & (45,678.265) & (82,531.680) \\
+ &  &  &  &  &  &  \\
+Observations & 67 & 65 & 54 & 56 & 33 & 43 \\
+ R-squared & 0.006 & 0.008 & 0.235 & 0.200 & 0.214 & 0.510 \\ \hline
 \end{tabular}
