--- a/Appendices/Methodology.tex
+++ b/Appendices/Methodology.tex
@@ -194,13 +194,9 @@ Note: This figure displays the predicted labor income profile obtained when cons
 	
 \end{figure}
 
-\subsubsection{Predictive Power and Testing Assumption~\ref{ass:eczema}} \label{appendix:pred}
+\subsubsection{Predictive Power} \label{appendix:pred}
 
-\noindent We present evidence on the predictive power of our prediction variables, in both the control and treatment synthetic groups we construct in the PSID, NLSY79, and CNLSY. Tables~\ref{table:predpsid} to \ref{table:predcnlsy} show that, in each of the auxiliary samples that we use, the prediction variables $\bm{X}_{t}, \bm{B}$ are strong predictors of labor income at age 30. We present this evidence at age 30 both for brevity and to compare the predictive power of $\bm{X}_{t},\bm{B}$ on the outcomes we consider in the ABC/CARE sample.\\
-
-\noindent This exercise also allows us to provide evidence in favor of Assumption~\ref{ass:eczema}. If $\bm{X}_{t}, \bm{B}$ are the inputs in the production of labor income at age 30, their marginal effects on this variable should be the same across the synthetic control and treatment groups, under Assumption~\ref{ass:eczema}. In each of the non-experimental samples we consider, the point estimates of the marginal effects of $\bm{X}_{t},\bm{B}$ on labor income at age 30 are very close. We would fail to reject any difference across these coefficients. We do not these tests both for brevity and because the point estimates across synthetic cohorts is evidently close.\\
-
-\noindent Being able to perform a test of Assumption~\ref{ass:eczema} using larger samples is appealing because recent tests of these assumptions have been based on small samples \citep{Heckman_Pinto_etal_2013_PerryFactor,Attanasio-etal_2015_NBER_Estimating-Production}. As Table~\ref{table:predabc} evidences, testing differences between the treatment and control groups becomes challenging because even when differences in coefficients could be stark, standard errors are sizable.
+\noindent We present evidence on the predictive power of our prediction variables, in both the control and treatment synthetic groups we construct in the PSID, NLSY79, and CNLSY. Tables~\ref{table:predpsid} to \ref{table:predcnlsy} show that, in each of the auxiliary samples that we use, the prediction variables $\bm{X}_{t}, \bm{B}$ are strong predictors of labor income at age 30. We present this evidence at age 30 both for brevity and to compare the predictive power of $\bm{X}_{t},\bm{B}$ on the outcomes we consider in the ABC/CARE sample. Analogous specification for the ABC/CARE sample are in Tables~\ref{table:predfac1} to \ref{table:predfac3}.\\
 
 \begin{sidewaystable}[H] 
 \begin{threeparttable}
@@ -301,7 +297,96 @@ Note: This figure displays the predicted labor income profile obtained when cons
 Note: This figure displays the predicted labor income profile obtained when constructing control- and treatment-group matches according to the procedure in Section~\ref{sec:necrosis}. We combine data from the Panel Study of Income Dynamics (PSID), the National Longitudinal Survey of Youth 1979 (NLSY79), and the Children of the National Longitudinal Survey of Youth 1979 (CNLSY79). We vary the prediction variables across the different panels, for both males and females. $\bm{B}$ variables: male and black indicators, and mother's education. $\bm{X}_{t}$ variables: years of education at age 30, labor income at ages 21 and 30, and BMI at age 34.
 \end{sidewaysfigure}
 
-\paragraph{Health Costs}
+
+\subsection{Testing  Assumption~\ref{ass:eczema}}
+
+\noindent In this section we test Assumption~\ref{ass:eczema} in the main text. Under Assumption~\ref{ass:eczema}, our empirical predictions are based on the null hypothesis: 
+
+\begin{equation}
+\phi_{j,t}^0 \left( \bm{X}_{t}^d, \bm{B}, \varepsilon_{j,t}^d\right) = \phi_{j,t}^1 \left( \bm{X}_{t}^d, \bm{B}, \bm{\varepsilon}_{j,t}^d\right) \label{eq:eqs}
+\end{equation}
+
+\noindent at time $t \in \{0, \ldots, T\}$ and for outcome $j \in \mathcal{J}_{t}$.\\
+
+\noindent In our empirical application, we assume that $\phi_{j,t}^d$ is a linear function of $ \bm{X}_{t}^d, \bm{B}, \bm{\varepsilon}_{j,t}^d$ for $d \in \{0,1\}$. We test if the coefficients characterizing $\phi_{j,t}^d$ for specifications including (i) $\bm{X}_{t}^d$, (ii) including  $\bm{B}$, and (iii) $\bm{X}_{t}^d, \bm{B}$. For this test, we use labor income at age 30 for illustration purposes.\\
+
+\noindent A potential problem with is the presence of standard endogeeity issues (e.g., mean dependence between schooling years and unobserved skills). Unless the bias in the treatment and control groups are exactly the same, endogeneity would bias our test statistics. A sufficient condition to obtain unbiased tests is $\mathbb{E} \left[ \bm{\varepsilon}_{j,t}^0 | \bm{X}_{t}^d, \bm{B} \right] = \mathbb{E} \left[ \bm{\varepsilon}_{j,t}^1 | \bm{X}_{t}^d, \bm{B} \right]$.\\
+
+\noindent An alternative is to follow \citet{Heckman_Pinto_etal_2013_PerryFactor} and obtain an approximation for  $\bm{\varepsilon}_{j,t}^d$ based on a measurement system. Formally, let the system be 
+
+\begin{eqnarray}
+\bm{M}_{t}^d     &=& \bm{\lambda}^d \bm{\theta}_{t}^d +  \bm{\upsilon}_t^d, \text{ where } \bm{\theta}^d  \independent \bm{\upsilon}_{t}^d \ \forall t \\ \nonumber 
+\bm{\varepsilon}_{t}^d &=& \bm{\beta}^d \bm{\theta}_{t}^d + \bm{\omega}_{t}^d \text{ where } \bm{\theta}^d  \independent \bm{\omega}_{t}^d \ \forall t. \label{eq:msystem}
+\end{eqnarray}
+
+\noindent With an auxiliary system of measures such that $\bm{M}_{t}^d $ has at least three elements, we are able to identify the vectors of coefficients characterizing these system: $\bm{\lambda}^d, \bm{\beta}^d$, as well as $\Sigma_{\bm{\theta}_{t}^d}, \Sigma_{\bm{\upsilon}_{t}^d}$ and use the method in \citet{Bartlett_1938_Nature} to obtain an estimate of $\bm{\theta}_{t}^d$ \citep{Cunha_Heckman_ea_2005_oep,Cunha_Heckman_etal_2010_est_tech_cognoncog}. To put this in practice, we assume that $\bm{\theta}_{t}^d$ has two dimensions (one representing cognitive skill and another representing non-cognitive skill). We assume dedicated measures for these skills at one time period. Put simply, we have two independent systems, one to measure $\theta_{c}^d$ and one to measure $\theta_{n}^d$, where $\bm{\theta}_{t}^d: = \left[ \theta_{c}^d, \theta_{n}^d \right]$. Further, we assume a common measurement system for the treatment and control groups (this is a sensible assumption given the small size of our sample). This assumption implies that $\bm{\lambda}^d, \bm{\beta}^d$, as well as $\Sigma_{\bm{\theta}_{t}^d}, \Sigma_{\bm{\upsilon}_{t}^d}$ are the same either when $d = 0$ or when $d = 1$.\\
+
+\noindent We use a set of measures from ages 2 to 8 to to obtain an estimate of $\theta_{c}^d$ and a set of measures of somatization, hostility, depression, and global index of mental health to measure (all at age 21) to estimate $\theta_{n}^d$.\footnote{For definitions and treatment effects on these variables see Appendix~\ref{appendix:results}.}\\
+
+\noindent Given the condition in \eqref{eq:msystem}, the estimates coefficients characterizing \eqref{eq:msystem} are unbiased, and therefore our tests are unbiased too. For each specification we consider, we present results controlling and not controlling for estimates of $\bm{\theta}_{t}^d$. Figure~\ref{figure:factors} presents the distribution of estimates for the two dimensions of $\bm{\theta}_{t}^d$ that we consider and Tables~\ref{table:predfac1} to \ref{table:predfac3} estimates of the two functions in \eqref{eq:eqs} using different specifications. In no case are we able to reject the null hypotheses implied by the equality in \eqref{eq:eqs}.
+
+
+\begin{figure}[H]
+\centering
+\caption{Estimates Cognitive and Non-cognitive Skills}\label{figure:factors}
+\begin{subfigure}[h]{0.7\textwidth}
+		\centering
+		\caption{Cognitive} \label{fig:c}
+		\includegraphics[width=\textwidth]{output/abccare_cfactor.eps}
+\end{subfigure}
+
+\begin{subfigure}[h]{0.7\textwidth}
+	\centering
+	\caption{Non-cognitive} \label{fig:n}
+		\includegraphics[width=\textwidth]{output/abccare_nfactor.eps}
+\end{subfigure}
+\footnotesize \justify
+Note: Panels (a) displays a factor score estimated based on the measurement system in \eqref{eq:msystem} and measures of IQ at ages 2, 3, 4, 5, 7, and 8 (cognitive skill). Panel (b) displays an analogous exercise using measures measures of somatization, hostility, depression, and a global mental health index at age 21 (non-cognitive skill). Both measures of skills are standardized to a mean of $0$ and a standard deviation of $1$. The mean difference between treatment and control is displayed below each panel, with standard error in parentheses. Standard errors are based on the bootstrap empirical distribution.
+\end{figure}
+
+\begin{sidewaystable}[H] 
+\begin{threeparttable}
+\caption{Prediction of Labor Income Accounting for $\bm{B}$ and $\bm{\theta}$, ABC/CARE}
+\label{table:predfac1}
+\centering 
+\footnotesize
+\input{output/abccare_funcform1_ready.tex}
+\begin{tablenotes}
+\footnotesize
+\item Note: Prediction of labor income at age 30 based on the variables listed in the row. Empty cells indicate that the variable was not used in the prediction. For each coefficient we provide point estimate and $p$-value for the treatment and control groups and a test for the treatment-control difference. $\theta_{c}$: factor score estimated based on the measurement system in \eqref{eq:msystem} and measures of IQ at ages 2, 3, 4, 5, 7, and 8 (cognitive skill). $\theta_{n}$: factor score estimated based on the measurement system in \eqref{eq:msystem} and measures of somatization, hostility, depression, and a global mental health index at age 21 (non-cognitive skill). Both measures of skills are standardized to a mean of $0$ and a standard deviation of $1$. Inference is based on the empirical bootstrap distribution.
+\end{tablenotes}
+\end{threeparttable}
+\end{sidewaystable}
+
+\begin{sidewaystable}[H] 
+\begin{threeparttable}
+\caption{Prediction of Labor Income Accounting for $\bm{\theta}, \bm{X}_{t} \text{ (set 1)}$, ABC/CARE}
+\label{table:predfac2}
+\centering 
+\footnotesize
+\input{output/abccare_funcform2_ready.tex}
+\begin{tablenotes}
+\footnotesize
+\item Note: Prediction of labor income at age 30 based on the variables listed in the row. Empty cells indicate that the variable was not used in the prediction. For each coefficient we provide point estimate and $p$-value for the treatment and control groups and a test for the treatment-control difference. $\theta_{c}$: factor score estimated based on the measurement system in \eqref{eq:msystem} and measures of IQ at ages 2, 3, 4, 5, 7, and 8 (cognitive skill). $\theta_{n}$: factor score estimated based on the measurement system in \eqref{eq:msystem} and measures of somatization, hostility, depression, and a global mental health index at age 21 (non-cognitive skill). Both measures of skills are standardized to a mean of $0$ and a standard deviation of $1$. Inference is based on the empirical bootstrap distribution.
+\end{tablenotes}
+\end{threeparttable}
+\end{sidewaystable}
+
+\begin{sidewaystable}[H] 
+\begin{threeparttable}
+\caption{Prediction of Labor Income Accounting for $\bm{B}$ and $\bm{\theta}, \bm{X}_{t} \text{ (set 2)}$, ABC/CARE}
+\label{table:predfac3}
+\centering 
+\footnotesize
+\input{output/abccare_funcform3_ready.tex}
+\begin{tablenotes}
+\footnotesize
+\item Note: Prediction of labor income at age 30 based on the variables listed in the row. Empty cells indicate that the variable was not used in the prediction. For each coefficient we provide point estimate and $p$-value for the treatment and control groups and a test for the treatment-control difference. $\theta_{c}$: factor score estimated based on the measurement system in \eqref{eq:msystem} and measures of IQ at ages 2, 3, 4, 5, 7, and 8 (cognitive skill). $\theta_{n}$: factor score estimated based on the measurement system in \eqref{eq:msystem} and measures of somatization, hostility, depression, and a global mental health index at age 21 (non-cognitive skill). Both measures of skills are standardized to a mean of $0$ and a standard deviation of $1$. Inference is based on the empirical bootstrap distribution.
+\end{tablenotes}
+\end{threeparttable}
+\end{sidewaystable}
+
+\subsection{Health Costs}
 
 \noindent We predict health care costs from age 30 up to age 79, and criminal costs from birth
 up to age 50. We then evaluate the predicted outcomes as if observed, and estimate the
@@ -312,7 +397,7 @@ predicted health outcomes exhibit an equal rate of attrition. We therefore emplo
 in Appendix \ref{app:method_partialobs} to estimate the treatment effect on health care costs at
 every age from 30 through 79, conditional on survival up to each age. \\
 
-\paragraph{Crime Costs}
+\subsection{Crime Costs}
 
 \noindent In the case of crime costs, we are able to predict costs for more than 100 individuals in the
 sample. We therefore utilize the method described in Appendix~\ref{app:method_fullobs}
