--- a/output/abccare_funcform1_ready.tex
+++ b/output/abccare_funcform1_ready.tex
@@ -9,4 +9,4 @@ BMI (34) &         &         &         &         &         &         &         &
 $\theta_{c}$ &         &         &         &         &         &         &  1322.009 &     0.360 &  -329.080 &     0.510 & -1651.089 &     0.535 \\  
 $\theta_{n}$ &         &         &         &         &         &         &   947.122 &     0.445 &  9979.087 &     0.195 &  9031.964 &     0.205 \\  
 Constant  & 24454.520 &     0.130 &  3731.899 &     0.475 & -2.07e+04 &     0.610 & 30653.092 &     0.120 &  8791.943 &     0.475 & -2.19e+04 &     0.600 \\  
-\bottomline \end{tabular}
+\bottomrule \end{tabular}
