--- a/output/abccare_funcform2_ready.tex
+++ b/output/abccare_funcform2_ready.tex
@@ -5,8 +5,8 @@ Mother's Education & -1185.376 &     0.760 &  4920.358 &     0.220 &  6105.733 &
 PIAT (5-7) &   152.554 &     0.325 &  -576.029 &     0.680 &  -728.583 &     0.730 &   349.690 &     0.310 &  -948.807 &     0.735 & -1298.497 &     0.815 \\  
 Education (30)  &  2956.656 &     0.015 & 10915.656 &     0.025 &  7959.000 &     0.060 &  4952.654 &     0.015 & 12374.844 &     0.025 &  7422.189 &     0.120 \\  
 Labor Income (21) &     0.679 &     0.030 &    -0.465 &     0.710 &    -1.144 &     0.895 &     1.056 &     0.030 &    -0.899 &     0.755 &    -1.955 &     0.930 \\  
-BMI (34) &         . &         . &         . &         . &         . &         . &         . &         . &         . &         . &         . &         . \\  
-$\theta_{c}$ &         . &         . &         . &         . &         . &         . &   349.690 &     0.310 &  -948.807 &     0.735 & -1298.497 &     0.815 \\  
-$\theta_{n}$ &         . &         . &         . &         . &         . &         . &  4952.654 &     0.015 & 12374.844 &     0.025 &  7422.189 &     0.120 \\  
+BMI (34) &        &        &        &        &        &        &        &        &        &        &        &         \\
+$\theta_{c}$ &        &        &        &        &        &        &   349.690 &     0.310 &  -948.807 &     0.735 & -1298.497 &     0.815 \\  
+$\theta_{n}$ &        &        &        &        &        &        &  4952.654 &     0.015 & 12374.844 &     0.025 &  7422.189 &     0.120 \\  
 Constant &   152.554 &     0.325 &  -576.029 &     0.680 &  -728.583 &     0.730 &     1.056 &     0.030 &    -0.899 &     0.755 &    -1.955 &     0.930 \\  
 \bottomrule \end{tabular}
