--- a/output/mincerpred.tex
+++ b/output/mincerpred.tex
@@ -1,8 +1,10 @@
-% matrix: lpernpv file: mincerpred.tex  16 Sep 2016 19:59:47
+% matrix: lpernpv file: mincerpred.tex  16 Sep 2016 20:12:28
 \begin{table}[htbp]
-\begin{tabular}{lcccccc} \hline \hline
- \multicolumn{1}{c}{ c1 }  & c1  & r1  & c1  & c1  & r2  \\  \hline 
-   29.765 &   992.179 &  1208.639 &    41.870 &  1395.672 &  1701.543 \\  
-    0.250 &     8.325 &     1.434 &     0.970 &    32.347 &     2.607 \\  
+\begin{tabular}{lccc} \hline \hline
+ \multicolumn{1}{c}{ c1 }  & c1  & r1  \\  \hline 
+   29.765 &   992.179 &  1208.639 \\  
+    0.250 &     8.325 &     1.434 \\  
+   41.870 &  1395.672 &  1701.543 \\  
+    0.970 &    32.347 &     2.607 \\  
 \hline \hline \end{tabular}
 \end{table}
