--- a/output/abccare_funcform3_ready.tex
+++ b/output/abccare_funcform3_ready.tex
@@ -1,12 +1,12 @@
 \begin{tabular}{lcccccccccccc} \toprule
 &\multicolumn{2}{c}{Control} & \multicolumn{2}{c}{Treatment} & \multicolumn{2}{c}{Treatment - Control} & \multicolumn{2}{c}{Control} & \multicolumn{2}{c}{Treatment} & \multicolumn{2}{c}{Treatment - Control} \\ \midrule
  & Coefficient  & $p$-value  & Coefficient  & $p$-value & Coefficient  & $p$-value  & Coefficient  & $p$-value  & Coefficient  & $p$-value  & Coefficient  & $p$-value \\ \midrule
-Mother's Education & -3396.557 &     0.905 &  -595.010 &     0.570 &  2801.547 &     0.265 & -4939.547 &     0.925 & -1783.446 &     0.645 &  3156.101 &     0.300 \\  
-PIAT (5-7)&   646.297 &     0.100 &   213.484 &     0.395 &  -432.812 &     0.645 &  1252.342 &     0.035 &   290.428 &     0.450 &  -961.914 &     0.745 \\  
-Education (30) &  2171.877 &     0.170 & 18933.859 &     0.000 & 16761.982 &     0.020 &  4919.624 &     0.110 & 20676.168 &     0.010 & 15756.545 &     0.035 \\  
+Mother's Education & -3,396.557 &     0.905 &  -595.010 &     0.570 &  2,801.547 &     0.265 & -4,939.547 &     0.925 & -1,783.446 &     0.645 &  3,156.101 &     0.300 \\  
+PIAT (5-7)&   646.297 &     0.100 &   213.484 &     0.395 &  -432.812 &     0.645 &  1,252.342 &     0.035 &   290.428 &     0.450 &  -961.914 &     0.745 \\  
+Education (30) &  2,171.877 &     0.170 & 18,933.859 &     0.000 & 16,761.982 &     0.020 &  4,919.624 &     0.110 & 20,676.168 &     0.010 & 15,756.545 &     0.035 \\  
 Labor Income (21) &     0.606 &     0.080 &     0.316 &     0.230 &    -0.290 &     0.645 &     0.701 &     0.195 &     0.131 &     0.360 &    -0.569 &     0.680 \\  
-BMI (34)  &  -167.372 &     0.620 & -1177.142 &     0.980 & -1009.770 &     0.920 &   292.583 &     0.310 & -1078.149 &     0.970 & -1370.732 &     0.910 \\  
-$\theta_{c}$ &         &        &        &        &        &        &-6549.362 &     0.805 &  -127.975 &     0.500 &  6421.387 &     0.350 \\  
-$\theta_{n}$ &         &        &        &        &        &        & 3708.096 &     0.340 &  3817.413 &     0.250 &   109.317 &     0.500 \\  
-Constant & -2.86e+04 &     0.760 & -1.92e+05 &     0.970 & -1.63e+05 &     0.915 & -1.20e+05 &     0.925 & -2.13e+05 &     0.915 & -9.25e+04 &     0.710 \\  
+BMI (34)  &  -167.372 &     0.620 & -1,177.142 &     0.980 & -1,009.770 &     0.920 &   292.583 &     0.310 & -1,078.149 &     0.970 & -1,370.732 &     0.910 \\  
+$\theta_{c}$ &         &        &        &        &        &        &-6,549.362 &     0.805 &  -127.975 &     0.500 &  6,421.387 &     0.350 \\  
+$\theta_{n}$ &         &        &        &        &        &        & 3,708.096 &     0.340 &  3,817.413 &     0.250 &   109.317 &     0.500 \\  
+Constant & -28,600.00 &     0.760 & -192,000.00 &     0.970 & -163,000.00 &     0.915 & -120,000.00 &     0.925 & -213,000.00 &     0.915 & -92,500.00 &     0.710 \\  
 \bottomrule \end{tabular}
