--- a/output/abccare_funcform1_ready.tex
+++ b/output/abccare_funcform1_ready.tex
@@ -1,12 +1,12 @@
 \begin{tabular}{lcccccccccccc} \toprule
 &\multicolumn{2}{c}{Control} & \multicolumn{2}{c}{Treatment} & \multicolumn{2}{c}{Treatment - Control} & \multicolumn{2}{c}{Control} & \multicolumn{2}{c}{Treatment} & \multicolumn{2}{c}{Treatment - Control} \\ \midrule
  & Coefficient  & $p$-value  & Coefficient  & $p$-value & Coefficient  & $p$-value  & Coefficient  & $p$-value  & Coefficient  & $p$-value  & Coefficient  & $p$-value \\ \midrule
-Mother's Education &   440.383 &     0.380 &  3693.417 &     0.300 &  3253.033 &     0.340 &  -203.428 &     0.525 &  3328.924 &     0.375 &  3532.352 &     0.370 \\  
+Mother's Education &   440.383 &     0.380 &  3,693.417 &     0.300 &  3,253.033 &     0.340 &  -203.428 &     0.525 &  3,328.924 &     0.375 &  3,532.352 &     0.370 \\  
 PIAT (5-7) &         &         &         &         &         &         &         &         &         &         &         &         \\
 Education (30) &         &         &         &         &         &         &         &         &         &         &         &         \\
 Labor Income (21) &         &         &         &         &         &         &         &         &         &         &         &         \\
 BMI (34) &         &         &         &         &         &         &         &         &         &         &         &         \\
-$\theta_{c}$ &         &         &         &         &         &         &  1322.009 &     0.360 &  -329.080 &     0.510 & -1651.089 &     0.535 \\  
-$\theta_{n}$ &         &         &         &         &         &         &   947.122 &     0.445 &  9979.087 &     0.195 &  9031.964 &     0.205 \\  
-Constant  & 24454.520 &     0.130 &  3731.899 &     0.475 & -2.07e+04 &     0.610 & 30653.092 &     0.120 &  8791.943 &     0.475 & -2.19e+04 &     0.600 \\  
+$\theta_{c}$ &         &         &         &         &         &         &  1,322.009 &     0.360 &  -329.080 &     0.510 & -1,651.089 &     0.535 \\  
+$\theta_{n}$ &         &         &         &         &         &         &   947.122 &     0.445 &  9,979.087 &     0.195 &  9,031.964 &     0.205 \\  
+Constant  & 24,500.00 &     0.130 &  3,731.899 &     0.475 & -20,700.00 &     0.610 & 30,700.00 &     0.120 &  8,791.943 &     0.475 & -21,900.00 &     0.600 \\  
 \bottomrule \end{tabular}
