push mincer preds

--- a/output/mincerpred.tex
+++ b/output/mincerpred.tex
@@ -1,10 +1,8 @@
-% matrix: lpernpv file: mincerpred.tex  16 Sep 2016 20:12:28
-\begin{table}[htbp]
-\begin{tabular}{lccc} \hline \hline
- \multicolumn{1}{c}{ c1 }  & c1  & r1  \\  \hline 
-   29.765 &   992.179 &  1208.639 \\  
-    0.250 &     8.325 &     1.434 \\  
-   41.870 &  1395.672 &  1701.543 \\  
-    0.970 &    32.347 &     2.607 \\  
-\hline \hline \end{tabular}
-\end{table}
+\begin{tabular}{lccc} \toprule
+Predicted (30) & Perpetuity (base 30) & Predicted Life-cycle\\  \midrule
+\multicolumn{3}{c}{\textbf{Control}}
+   29.765 &   992.179 &  1,208.639 \\  
+    (0.250) &     (8.325) &     (1.434) \\  \\
+    \multicolumn{3}{c}{\textbf{Treatment}} \\
+   41.870 &  1,395.672 &  1,701.543 \\  
+    (0.970) &    (32.347) &     (2.607) \\  \bottomrule \end{tabular}
