--- a/output/mincerpred_ready.tex
+++ b/output/mincerpred_ready.tex
@@ -1,8 +1,8 @@
-% matrix: all file: mincerpred.tex  15 Sep 2016 00:37:50
-\begin{tabular}{ccccccc} \toprule
-\mc{3}{c}{\textbf{Control}} & \mc{3}{c}{\textbf{Treatment}} \\
-\cmidrule(lr){1-3} \cmidrule(lr){4-6}
-Prediction  & Perpetuity  & Predicted NPV & Prediction  & Perpetuity  & Predicted NPV 	\\ \midrule
-   28.968 &   965.599 &  1,208.639 &    40.594 &  1,353.133 &  1,701.543 \\  
-    (5.176) &  (5,750.590) &   (260.950) &     (9.259) & (10,287.261) &   (474.488) \\  
-\bottomrule \end{tabular}
+\begin{tabular}{lccc} \toprule
+Predicted (30) & Perpetuity (base 30) & Predicted Life-cycle\\  \midrule
+\multicolumn{3}{c}{\textbf{Control}} \\
+   29.765 &   992.179 &  1,208.639 \\  
+    (0.250) &     (8.325) &     (1.434) \\  \\
+    \multicolumn{3}{c}{\textbf{Treatment}} \\
+   41.870 &  1,395.672 &  1,701.543 \\  
+    (0.970) &    (32.347) &     (2.607) \\  \bottomrule \end{tabular}
