--- a/abc_comprehensivecba.tex
+++ b/abc_comprehensivecba.tex
@@ -359,10 +359,11 @@ A benchmark comparison for the labor income predictions we produce is to follow 
 \centering
 \begin{threeparttable}
 \caption{Mincer-type Predictions, Age 30}\label{tab:mincerpred}
+\small
 \input{output/mincerpred_ready.tex}
 \begin{tablenotes}
 \footnotesize
-\item Note: This table presents Mincer-type predictions \citep{Mincer_1974_schooling}. Prediction: predicted labor income at age 30 based on the procedure in Section~\ref{sec:necrosis}. Perpetuity: Prediction/.03. Life-cycle NPV: life-cycle predicted net present value of income based on the procedure in Section~\ref{sec:necrosis}. All values are in 1,000s (2014 USD). Standard errors are in parentheses and are based on the empirical bootstrap distribution.
+\item Note: This table presents Mincer-type predictions \citep{Mincer_1974_schooling}. Prediction at 30: predicted labor income at age 30 based on the procedure in Section~\ref{sec:necrosis}. Perpetuity based on 30: Prediction at 30/.03. Predicted Life-cycle: life-cycle predicted net present value of income based on the procedure in Section~\ref{sec:necrosis}. All values are in 1,000s (2014 USD). Standard errors are in parentheses and are based on the empirical bootstrap distribution.
 \end{tablenotes}
 \end{threeparttable}
 \end{table}
@@ -414,7 +415,7 @@ For any $\bm{X}^d_t, \bm{B}, \varepsilon^d_{j,t}$ in $\sup(\bm{X},\bm{Y},\bm{B})
 \phi^1_{j,t} (\bm{X}^d_t, \bm{B}, \varepsilon^d_{j,t}) = \phi^0_{j,t} (\bm{X}^d_t, \bm{B}, \varepsilon^d_{j,t}) \qquad j \in \mathcal J_t, \quad t \in \{0,\dots,T\},
 \end{equation*}
 \end{assumption}
-i.e., treatment effects operate through inputs and not shifts in the input-output functions. This allows us to use post-$t^*$ relationships fit on the auxiliary samples to forecast post-$t^*$ outcomes of treatment group members. Evidence for the validity of this assumption in the context of early childhood programs is presented in \citet{Heckman_Pinto_etal_2013_PerryFactor} and \citet{Attanasio-etal_2015_NBER_Estimating-Production}. Appendix~\ref{appendix:pred} displays evidence favoring this assumption using each of the synthetic treatment and control groups we construct, i.e. based on different non-experimental samples.
+i.e., treatment effects operate through inputs and not shifts in the input-output functions. This allows us to use post-$t^*$ relationships fit on the auxiliary samples to forecast post-$t^*$ outcomes of treatment group members. Evidence for the validity of this assumption in the context of early childhood programs is presented in \citet{Heckman_Pinto_etal_2013_PerryFactor} and \citet{Attanasio-etal_2015_NBER_Estimating-Production}. Appendix~\ref{app:invariance} displays evidence favoring this assumption using our experimental sample.
 
 We make a corresponding assumption for the equation governing the evolution of inputs:
 \addtocounter{assumption}{-1}
