few last changes

--- a/Appendices/Methodology.tex
+++ b/Appendices/Methodology.tex
@@ -298,7 +298,7 @@ Note: This figure displays the predicted labor income profile obtained when cons
 \end{sidewaysfigure}
 
 
-\subsection{Testing  Assumption~\ref{ass:eczema}}
+\subsection{Testing  Assumption~\ref{ass:eczema}} \label{app:invariance}
 
 \noindent In this section we test Assumption~\ref{ass:eczema} in the main text. Under Assumption~\ref{ass:eczema}, our empirical predictions are based on the null hypothesis: 
 
