--- a/output/mincerpred.tex
+++ b/output/mincerpred.tex
@@ -1,8 +1,10 @@
-\begin{tabular}{lccc} \toprule
-Predicted (30) & Perpetuity (base 30) & Predicted Life-cycle\\  \midrule
-\multicolumn{3}{c}{\textbf{Control}}
-   29.765 &   992.179 &  1,208.639 \\  
-    (0.250) &     (8.325) &     (1.434) \\  \\
-    \multicolumn{3}{c}{\textbf{Treatment}} \\
-   41.870 &  1,395.672 &  1,701.543 \\  
-    (0.970) &    (32.347) &     (2.607) \\  \bottomrule \end{tabular}
+% matrix: lpernpv file: mincerpred.tex  17 Sep 2016 13:22:54
+\begin{table}[htbp]
+\begin{tabular}{lccc} \hline \hline
+ \multicolumn{1}{c}{ c1 }  & c1  & r1  \\  \hline 
+   27.980 &   932.678 &  1208.639 \\  
+    0.267 &     8.897 &     1.434 \\  
+   39.223 &  1307.435 &  1701.543 \\  
+    0.907 &    30.241 &     2.607 \\  
+\hline \hline \end{tabular}
+\end{table}
